[package]
name = "vkifi"
version = "0.1.1"
description = "A frontend for kifi"
authors = ["Saurav S. Samantaray <sssamantaray77@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Vaurkhorov/vkifi"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kifi = "0.4.10-alpha"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
